# testrepo

./: .env.example  .gitignore  BUILD_EXE.md  QUICKSTART.md  README.md  build_exe.bat  build_exe.sh  discord_meeting_bot.py  discord_meeting_bot.spec  images.jfif  master_creator.db  requirements.txt
master_creator_mvp/: .env.example  .gitignore  CONTENT_STORAGE_IMPLEMENTATION.md  ENGINE_4_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  READY_TO_RUN.md  SETUP_CHECKLIST.md  STARTUP_GUIDE.md  WEBSOCKET_GAP_ANALYSIS.md  WEBSOCKET_QUICKSTART.md  WEBSOCKET_REALTIME_UPDATES.md  WINDOWS_COMPLETE_SETUP.md  check_setup.py  docker-compose.yml  fix_env.bat  init_content_storage.py  init_database.bat  init_database.py  install_db_driver.bat  install_missing_packages.bat  pyproject.toml  requirements.txt  run_server.py  setup_windows.bat  start_mvp.sh  start_server.bat
master_creator_mvp/data/: README.md  cold_start_students.json
master_creator_mvp/data/schemas/: 01_create_tables.sql
master_creator_mvp/frontend/: README.md  index.html  package.json  tailwind.config.js
master_creator_mvp/frontend/src/: App.jsx  index.css
master_creator_mvp/frontend/src/components/: PipelineMonitor.jsx  StudentPerformanceDashboard.jsx  TeacherInputView.jsx
master_creator_mvp/frontend/src/services/: api.js
master_creator_mvp/scripts/: generate_cold_start_data.py  import_cold_start_data.py
master_creator_mvp/src/api/: main.py
master_creator_mvp/src/api/routes/: __init__.py  adaptive.py  assessments.py  lessons.py  pipeline.py  students.py  v1_lessons.py  worksheets.py
master_creator_mvp/src/api/websocket/: __init__.py  connection_manager.py  routes.py
master_creator_mvp/src/content_storage/: __init__.py  interface.py  models.py
master_creator_mvp/src/engines/: base_engine.py  engine_0_unit_planner.py  engine_1_lesson_architect.py  engine_2_worksheet_designer.py  engine_3_iep_specialist.py  engine_4_adaptive.py  engine_5_diagnostic.py  engine_6_feedback.py
master_creator_mvp/src/grader/: constructed_response.py  multiple_choice.py  rubric_engine.py
master_creator_mvp/src/orchestration/: langgraph_pipeline.py  pipeline.py  state_management.py
master_creator_mvp/src/student_model/: database.py  interface.py  schemas.py  vector_store.py
master_creator_mvp/teacher_ui/: Home.py  README.md
master_creator_mvp/teacher_ui/pages/: 1_Generate_Lesson.py  2_Review_Worksheets.py  3_Student_Dashboard.py  4_IEP_Manager.py  5_Settings.py
master_creator_mvp/tests/: conftest.py  test_integration.py  test_student_model.py
src/teacher_ui/utils/: __init__.py  api_client.py
